[package]
name = "atm-raytracer"
version = "0.3.0"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]
edition = "2018"

[dependencies]
atm-refraction = "0.3"
dted = "0.1"
clap = "2.0"
image = "0.22"
imageproc = "0.19"
rayon = "1.0"
rusttype = "*"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

[features]
default = ["atm-refraction/serialization"]
