[package]
name = "atm-raytracer"
version = "0.9.1"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]
edition = "2018"

[dependencies]
atm-refraction = "0.4"
bincode = "1.2"
clap = "2.0"
dted = "0.2"
fltk = "1.1"
geotiff-rs = "0.1"
image = "0.24"
imageproc = "0.23"
lazy_static = "1.4"
libflate = "0.1"
nalgebra = "0.27"
rayon = "1.0"
regex = "1.5"
rusttype = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

[features]
default = ["atm-refraction/serialization", "nalgebra/serde-serialize"]
